<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <ImageView
        android:id="@+id/bikeimg"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/bike" />

    <TextView
        android:id="@+id/riding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/riding_now"
        android:textSize="50dp"
        android:textColor="@color/sblack"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bikeimg"/>

    <Button
        android:id="@+id/finish"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/riding"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:alpha="0.8"
        android:text="@string/finish_button"/>

</RelativeLayout>